--- a/calc.html
+++ b/calc.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#03C4A1">
+
   <link rel="shortcut icon" href="./assets/images/favicon.png" />
   <link rel="stylesheet" href="/assets/css/global.css">
   <link rel="stylesheet" href="/assets/css/calc.css">
