back-to-home button

--- a/calc.html
+++ b/calc.html
@@ -24,7 +24,9 @@
       <div class="input">
         <img src="./assets/images/logo.svg" alt="IMC Calc">
 
-        <p>Preencha os campos abaixo e veja seu resultado</p>
+        <p>Preencha os campos abaixo e veja seu resultado<br/>
+          <a href="/">Voltar</a>
+        </p>
       
 
         <!-- Form -->
