:bug: (fix): division by zero error

--- a/calc.html
+++ b/calc.html
@@ -62,7 +62,7 @@
           <span class="title">Seu IMC</span>
           <span class="score">-</span>
           <span class="status">
-            
+            Status
           </span>
         </div>
 
