--- a/calc.html
+++ b/calc.html
@@ -6,8 +6,8 @@
   <meta name="theme-color" content="#03C4A1">
 
   <link rel="shortcut icon" href="./assets/images/favicon.png" />
-  <link rel="stylesheet" href="/assets/css/global.css">
-  <link rel="stylesheet" href="/assets/css/calc.css">
+  <link rel="stylesheet" href="./assets/css/global.css">
+  <link rel="stylesheet" href="./assets/css/calc.css">
 
   <title>IMC Calc</title>
 </head>
